<resources>
    <string name="app_name">VLSM Subnet Mask Calculator</string>
    <string name="block_size">Total Block Size used\n(Including Gateway and Broadcast Address):\n%s</string>
    <string name="block_size_default">Total Block Size used\n(Including Gateway and Broadcast Address):\nN/A</string>
    <string name="result_default">Gateway Address = N/A\nAvailable range: N/A\nBroadcast Address:\nN/A</string>
    <string name="result_values">Gateway Address = %s\nAvailable range: %s - %s\nBroadcast Address: %s</string>
    <string name="prefix">CIDR Prefix</string>
    <string name="subnet_mask">Subnet Mask</string>
    <string name="number_of_addresses"># Addresses</string>
    <string name="gateway_address">Gateway Address</string>
    <string name="calculate">Calculate</string>
</resources>
