<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".EquivalentValues">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/radPrefix"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/prefix"
                android:checked="true"
                android:layout_margin="2dp"/>

            <RadioButton
                android:id="@+id/radSubnet"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/subnet_mask"
                android:layout_margin="2dp"/>

            <RadioButton
                android:id="@+id/radNumberOfAddresses"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/number_of_addresses"
                android:layout_margin="2dp"/>
        </RadioGroup>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <EditText
                android:id="@+id/etPrefix"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/prefix"
                android:inputType="number"
                android:layout_margin="2dp"/>

            <EditText
                android:id="@+id/etSubnet"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:enabled="false"
                android:hint="@string/subnet_mask"
                android:inputType="number|numberDecimal"
                android:digits="0123456789."
                android:layout_margin="2dp" />

            <EditText
                android:id="@+id/etNumberOfAddresses"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:enabled="false"
                android:ems="10"
                android:hint="@string/number_of_addresses"
                android:inputType="number"
                android:layout_margin="2dp" />

        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/btnCalculate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/calculate"
        android:layout_margin="2dp" />

    <TextView
        android:id="@+id/tvBlockSize"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
        android:text="@string/block_size_default"
        android:layout_margin="2dp" />

</LinearLayout>
